CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(FRE4)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
INCLUDE(CheckPlatform)
MESSAGE("Platform name: ${PLATFORM_NAME}")

#Options
OPTION(BUILDS_UNIT_TESTS "Build unit tests." OFF)
OPTION(BUILDS_DEMO "Build demo." OFF)

SET(ENGINE_NAME "Fre")

INCLUDE(ExternalPaths.cmake)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Lib")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Lib")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Bin")

SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/Install)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

IF (PLATFORM_WIN)
	SET(MSVC_COMPILER_DEFS "-D_VARIADIC_MAX=10")
ELSEIF(PLATFORM_OSX)
	SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
	SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
ELSE()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
ENDIF()

IF (BUILDS_UNIT_TESTS)
	ADD_SUBDIRECTORY(External/GTest)
ENDIF()

IF (BUILDS_DEMO)
	ADD_SUBDIRECTORY(Demo)
ENDIF()

ADD_SUBDIRECTORY(Source)
