CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
CMAKE_POLICY(SET CMP0020 NEW)
CMAKE_POLICY(SET CMP0043 NEW)

INCLUDE(QtPreFind.cmake)

SET(PROJECT_NAME Demo)
SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${QT5_MODULE_PATH})

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Core REQUIRED)

FILE(GLOB HEADER_FILES *.h)
FILE(GLOB SOURCE_FILES *.cpp)

INCLUDE_DIRECTORIES(${COMMON_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
qt5_use_modules(${PROJECT_NAME} Widgets)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ENGINE_NAME})

