CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(GLM)

IF (GLM_FOUND)
	SET(MATH_DIRS ${GLM_INCLUDE_DIRS})
	SET(MATH_H "${DEV_EXTERNAL_DIR}/Math/MathGLM.h")
ENDIF()

SET(COMMON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Common")

#${MATH_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Include"

SET(OPENGL_EXTERNAL_DIR "${DEV_EXTERNAL_DIR}/OpenGL")

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(RenderGL)
ADD_SUBDIRECTORY(Image)

IF (BUILDS_DEMO)
	ADD_SUBDIRECTORY(Demo)
ENDIF()

IF (BUILDS_UNIT_TESTS)
	ADD_SUBDIRECTORY(Test)
ENDIF()