CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OPENGL_EXTERNAL_DIR "${DEV_EXTERNAL_DIR}/OpenGL")

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Math)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(RenderGL)
ADD_SUBDIRECTORY(NativePlatform)

IF (BUILDS_DEMO)
	ADD_SUBDIRECTORY(Demo)
ENDIF()

IF (BUILDS_UNIT_TESTS)
	ADD_SUBDIRECTORY(Test)
ENDIF()
