CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

IF (WIN32)
    SET(CMAKE_LIBRARY_PATH "C:/program files(x86)/windows kits/8.0/lib/win8/um/x64")
	LIST(APPEND CMAKE_LIBRARY_PATH "C:/program files (x86)/windows kits/8.0/lib/win8/um/x64")
ELSE()
	#SET(QT5_PATH "/Users/Anton/Qt/5.3/clang_64/" CACHE PATH "Path to Qt5")
	#SET(QT5_MODULE_PATH ${QT5_PATH}/lib/cmake)
ENDIF()

IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET(CMAKE_PREFIX_PATH $ENV{QT64_LOCATION})
ELSE()
	SET(CMAKE_PREFIX_PATH $ENV{QT_LOCATION})
ENDIF()

SET(PROJECT_NAME Demo)
SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${QT5_MODULE_PATH})

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Core REQUIRED)

FILE(GLOB HEADER_FILES *.h)
FILE(GLOB SOURCE_FILES *.cpp)

INCLUDE_DIRECTORIES(${COMMON_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
qt5_use_modules(${PROJECT_NAME} Widgets)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ENGINE_NAME})

