CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(PROJECT_NAME ${ENGINE_NAME})

FILE(GLOB_RECURSE HEADER_FILES Include/*.h Include/*.inc Include/RD/*.h)
FILE(GLOB_RECURSE SOURCE_FILES Source/*.*)

SOURCE_GROUP(RDInterface REGULAR_EXPRESSION "RD.*")

ADD_DEFINITIONS(-D_FRE_EXPORTS 
	-D_RD_EXPORT 
	-D_USE_MATH_DEFINES
)

IF(PLATFORM_NAME_LINUX)
	SET(CMAKE_CXX_FLAGS ${CMAKE_CSS_FLAGS} "-fPIC")
ENDIF()

ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Common Math NativePlatform)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC 
		Include
		Include/Math
		Include/Containers
		Include/Misc
		Include/RD
)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")

SET(_INSTALL_FILES)

FOREACH(DIR ${COMMON_DIR})
    IF(IS_DIRECTORY ${DIR})
		FILE(GLOB files "${DIR}/*.h")
        LIST(APPEND _INSTALL_FILES ${files})
    ENDIF()
 ENDFOREACH()

INSTALL(FILES ${HEADER_FILES} ${_INSTALL_FILES} DESTINATION "C:\\Temp\\FRE_INSTALL\\Include")

INCLUDE(RDExportMethods.cmake)



