CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(PROJECT_NAME ${ENGINE_NAME})

FILE(GLOB_RECURSE HEADER_FILES Include/*.h Include/*.inc)
FILE(GLOB_RECURSE SOURCE_FILES Source/*.*)

SOURCE_GROUP(RDInterface REGULAR_EXPRESSION "RD.*")

ADD_DEFINITIONS(-D_FRE_EXPORTS 
	-D_RD_EXPORT 
	-D_USE_MATH_DEFINES
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	FreCommon 
	FreMath 
	NativePlatform 
	FreRenderDeviceInterface)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC 
		Include
		Include/Math
		Include/Containers
		Include/Misc
)



