CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(TARGET_NAME ${ENGINE_NAME})

FILE(GLOB_RECURSE HEADER_FILES Include/*.h Include/*.inc)
FILE(GLOB_RECURSE SOURCE_FILES Source/*.*)

SOURCE_GROUP(RDInterface REGULAR_EXPRESSION "RD.*")

ADD_DEFINITIONS(-DFRE_EXPORTS 
	-D_RD_EXPORT 
	-D_USE_MATH_DEFINES
)

ADD_LIBRARY(${TARGET_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

GENERATE_EXPORT_HEADER(${TARGET_NAME} BASE_NAME core)

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} 
	PUBLIC 
		Include
		Include/Math
		Include/Containers
		Include/Misc
		${CMAKE_CURRENT_BINARY_DIR}
)

TARGET_LINK_LIBRARIES(${TARGET_NAME} 
	FreCommon 
	FreMath 
	FreRenderDeviceInterface
	Platform 
)



