CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME GLPlatform)

FILE(GLOB PROJECT_FILES *.*)
FIND_PACKAGE(OpenGL REQUIRED)

SET(OPENGL_INCLUDE_EXT_DIR ${FRE_EXTERNAL_PATH}/OpenGL)
SET(LINK_LIBRARY ${OPENGL_LIBRARIES})

IF (WIN32)
	SET(PLATFORM_NAME Win)
ELSEIF (APPLE)
	SET(PLATFORM_NAME Osx)
	
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	MARK_AS_ADVANCED(COCOA_LIBRARY)

    LIST(APPEND LINK_LIBRARY ${COCOA_LIBRARY})
ENDIF()

FILE(GLOB PLATFORM_FILES ${PLATFORM_NAME}/*.*)

ADD_DEFINITIONS(-DGL_CROSS_PLATFORM_EXPORTS)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${OPENGL_INCLUDE_EXT_DIR}
	${FRE_DEV_COMMON_DIR})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_FILES} ${PLATFORM_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIBRARY})

#INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")