SET(TARGET_NAME HRI)

ADD_LIBRARY(${TARGET_NAME} INTERFACE)

SET(OUT_RD_IMPL_DIR ${CMAKE_CURRENT_BINARY_DIR})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME}
    INTERFACE
    $<BUILD_INTERFACE:;${CMAKE_CURRENT_SOURCE_DIR}/Interfaces;${OUT_RD_IMPL_DIR};../Misc;>
    )

ADD_SUBDIRECTORY(GL)
#ADD_SUBDIRECTORY(Vulkan)