CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB_RECURSE FILES *.*)

FIND_PACKAGE(GLM)
IF (GLM_FOUND)
	SET(MATH_H "${CMAKE_CURRENT_SOURCE_DIR}/MathGLM.h")
ENDIF()

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/MathConfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/MathConfig.h)

ADD_LIBRARY(Math STATIC ${FILES})

TARGET_INCLUDE_DIRECTORIES(Math
	PUBLIC 
		${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_CURRENT_BINARY_DIR}
)
