CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(TARGET_NAME FreMath)

FILE(GLOB FILES *.*)

FIND_PACKAGE(GLM)
IF (GLM_FOUND)
	SET(MATH_H "${CMAKE_CURRENT_SOURCE_DIR}/MathGLM.h")
	SET(EXTERNAL_MATH_INCLUDE ${GLM_INCLUDE_DIR})
ENDIF()

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/MathConfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/Config/MathConfig.h)

ADD_LIBRARY(${TARGET_NAME} STATIC ${FILES})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME}
	PUBLIC 
		${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_CURRENT_BINARY_DIR}/Config
		${EXTERNAL_MATH_INCLUDE}
)
