CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME NativePlatform)

FIND_PACKAGE(FPlatform REQUIRED)

FILE(GLOB HEADER_FILES Include/*.h)
FILE(GLOB SOURCE_FILES Source/*.*)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC
		Include
		${FPLATFORM_INCLUDE_DIR}
	PRIVATE
		Source
		utf8
)