CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME NativePlatform)

FILE(GLOB HEADER_FILES Include/*.h)
FILE(GLOB SOURCE_FILES Source/*.*)
FILE(GLOB PLATFORM_SOURCE_FILES Source/${PLATFORM_NAME}/*.*)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC
		Include
	PRIVATE
		Source
		Source/${PLATFORM_NAME}
		utf8
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${CMAKE_DL_LIBS}
)
