CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME Output)

FILE(GLOB_RECURSE HEADER_FILES Include/*.h)
FILE(GLOB_RECURSE SOURCE_FILES Source/*.cpp)

INCLUDE_DIRECTORIES(${FRE_DEV_COMMON_DIR}
					${CMAKE_CURRENT_SOURCE_DIR}/Include)


ADD_DEFINITIONS(-D_OUTPUT_EXPORTS)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
