CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME SysPlatform)

FILE(GLOB SOURCE_FILES *.*)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

ADD_DEFINITIONS(-D_SYS_PLATFORM_EXPORTS)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/Include
		${CMAKE_CURRENT_SOURCE_DIR}/../Common
	PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}/Source
		${CMAKE_CURRENT_SOURCE_DIR}/utf8
)
