CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME Platform)

FILE(GLOB HEADER_FILES Public/*.h)
FILE(GLOB SOURCE_FILES Private/*.*)
FILE(GLOB PLATFORM_SOURCE_FILES Private/${PLATFORM_NAME}/*.*)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC
		Public
	PRIVATE
		Private
		Private/${PLATFORM_NAME}
		utf8
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${CMAKE_DL_LIBS}
)

ADD_SUBDIRECTORY(Test)