
ADD_LIBRARY(RenderDeviceInterface INTERFACE)

SET(OUT_RD_IMPL_DIR ${CMAKE_CURRENT_BINARY_DIR})

TARGET_INCLUDE_DIRECTORIES(RenderDeviceInterface
    INTERFACE
    $<BUILD_INTERFACE:;${CMAKE_CURRENT_SOURCE_DIR}/Interfaces;${OUT_RD_IMPL_DIR};../Engine/Include/Misc;>
    )

INCLUDE(RDExportMethods.cmake)

#ADD_SUBDIRECTORY(RenderDX)
ADD_SUBDIRECTORY(RenderGL)
#ADD_SUBDIRECTORY(RenderVulkan)