CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME GLRenderDevice)
SET(OPENGL_EXTERNAL_DIR $ENV{OPENGL_EXTERNAL_DIR})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

FILE(GLOB HEADER_FILES *.h)
FILE(GLOB SOURCE_FILES *.cpp)

SOURCE_GROUP(OpenGLAPI REGULAR_EXPRESSION "OpenGL.*API")
SOURCE_GROUP(Windows REGULAR_EXPRESSION ".*Windows.*")
SOURCE_GROUP(Osx REGULAR_EXPRESSION ".*Osx.*")
SOURCE_GROUP(Linux REGULAR_EXPRESSION ".*X11.*")

FILE(GLOB PLATFORM_SOURCE_FILES ${PLATFORM_NAME}/*.*)

#message(${OPENGL_EXTERNAL_DIR})

INCLUDE_DIRECTORIES(
	${COMMON_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/${PLATFORM_NAME}
	${CMAKE_CURRENT_SOURCE_DIR}/GLPlatform
	${OPENGL_EXTERNAL_DIR}
	${GLEW_INCLUDE_DIRS}
	)

ADD_DEFINITIONS(-D_USE_MATH_DEFINES)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} GLPlatform)

ADD_SUBDIRECTORY(GLPlatform)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")
