CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME GLRenderDevice)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

FILE(GLOB HEADER_FILES *.h API/*.h)
FILE(GLOB SOURCE_FILES *.cpp API/*.cpp)

#SOURCE_GROUP(OpenGLAPI REGULAR_EXPRESSION "OpenGL.*API")
SOURCE_GROUP(GLAPI REGULAR_EXPRESSION ".*GLAPI.*")
#SOURCE_GROUP(Osx REGULAR_EXPRESSION ".*Osx.*")
#SOURCE_GROUP(Linux REGULAR_EXPRESSION ".*X11.*")

FILE(GLOB PLATFORM_SOURCE_FILES ${PLATFORM_NAME}/*.*)


ADD_DEFINITIONS(-D_USE_MATH_DEFINES)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PRIVATE
	${COMMON_DIR}
	${PLATFORM_NAME}
	${GLEW_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../Engine/Include/RD
	${CMAKE_CURRENT_SOURCE_DIR}/../Engine/Include/Misc
	${CMAKE_CURRENT_SOURCE_DIR}/API
)

IF(WIN32)
	ADD_DEFINITIONS(-DGLEW_STATIC)
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${OPENGL_LIBRARIES} 
	${GLEW_LIBRARIES}
	GLPlatform
)

ADD_SUBDIRECTORY(GLPlatform)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")
