CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME UTest)

ENABLE_TESTING()

FILE(GLOB_RECURSE HEADER_FILES *.h)
FILE(GLOB_RECURSE SOURCE_FILES *.cpp)

INCLUDE_DIRECTORIES(${FRE_DEV_DIRS} ${GTEST_INCLUDE_DIRS})

ADD_DEFINITIONS(${MSVC_COMPILER_DEFS})
ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

ADD_DEPENDENCIES(${PROJECT_NAME} googletest)

IF (WIN32)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} debug ${GTEST_LIBS_DIR}/Debug/gtest.lib optimized ${GTEST_LIBS_DIR}/Release/gtest.lib)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} debug ${GTEST_LIBS_DIR}/Debug/gtest_main.lib optimized ${GTEST_LIBS_DIR}/Release/gtest_main.lib)
ELSE()
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} debug ${GTEST_LIBS_DIR}/Debug/libgtest.a optimized ${GTEST_LIBS_DIR}/Release/libgtest.a)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} debug ${GTEST_LIBS_DIR}/Debug/libgtest_main.a optimized ${GTEST_LIBS_DIR}/Release/libgtest_main.a)
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ENGINE_NAME})
ADD_TEST(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})