CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME GLRenderDevice)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(EGL REQUIRED)

FILE(GLOB HEADER_FILES *.h API/*.h)
FILE(GLOB SOURCE_FILES *.cpp API/*.cpp)

SOURCE_GROUP(GLAPI REGULAR_EXPRESSION ".*GLAPI.*")

ADD_DEFINITIONS(-D_USE_MATH_DEFINES -DGLCP_STATIC)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PRIVATE
		API
		${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_CURRENT_SOURCE_DIR}/../Engine/Include/Misc
)

IF(WIN32)
	ADD_DEFINITIONS(-DGLEW_STATIC)
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${OPENGL_gl_LIBRARY} 
	GLEW::GLEW
	PGL
	FreCommon
	HRI
)

ADD_SUBDIRECTORY(PGL)
