SET(PROJECT_NAME UTest_RGPImage)

ENABLE_TESTING()

FILE(GLOB_RECURSE SOURCE_FILES *.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	RGPImage
	GTestMain
)

IF(USE_VS_SOLUTION_FOLDER)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "UnitTest")
ENDIF()

#ADD_TEST(NAME Test1 COMMAND ${PROJECT_NAME})