CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME GLRenderDevice)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

FILE(GLOB HEADER_FILES *.h API/*.h)
FILE(GLOB SOURCE_FILES *.cpp API/*.cpp)
FILE(GLOB PLATFORM_SOURCE_FILES ${PLATFORM_NAME}/*.*)

SOURCE_GROUP(GLAPI REGULAR_EXPRESSION ".*GLAPI.*")

ADD_DEFINITIONS(-D_USE_MATH_DEFINES)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PRIVATE
		API
		${PLATFORM_NAME}
		${GLEW_INCLUDE_DIRS}
		${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_CURRENT_SOURCE_DIR}/../Engine/Include/RD
		${CMAKE_CURRENT_SOURCE_DIR}/../Engine/Include/Misc
)

IF(WIN32)
	ADD_DEFINITIONS(-DGLEW_STATIC)
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${OPENGL_LIBRARIES} 
	${GLEW_LIBRARIES}
	PGL
	Common
)

ADD_SUBDIRECTORY(PGL)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")
