CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME GLP)

FIND_PACKAGE(OpenGL REQUIRED)

SET(LINK_LIBRARY ${OPENGL_LIBRARIES})

ADD_DEFINITIONS(-DGL_PLATFORM_EXPORTS)

IF (PLATFORM_NAME_OSX)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	MARK_AS_ADVANCED(COCOA_LIBRARY)
   	LIST(APPEND LINK_LIBRARY ${COCOA_LIBRARY})
ENDIF()

FILE(GLOB HEADER_FILES Include/*.h)
FILE(GLOB PLATFORM_SOURCE_FILES ${PLATFORM_NAME}/*.*)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC 
		Include
	PRIVATE 
		${OPENGL_INCLUDE_DIR}
		${CMAKE_CURRENT_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIBRARY})

