CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME GLPlatform)

FIND_PACKAGE(OpenGL REQUIRED)

IF (NOT DEFINED ENV{OPENGL_INCLUDE_DIR} OR NOT DEFINED COMMON_DIRS)
	MESSAGE("Not found path." FATAL_ERROR)
ENDIF()

SET(OPENGL_INCLUDE_DIR $ENV{OPENGL_INCLUDE_DIR})
SET(LINK_LIBRARY ${OPENGL_LIBRARIES})

FILE(GLOB SOURCE_FILES *.*)

IF (WIN32)
	SET(GL_PLATFORM_NAME Win)
ELSEIF (APPLE)
	SET(GL_PLATFORM_NAME Osx)

	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	MARK_AS_ADVANCED(COCOA_LIBRARY)
    LIST(APPEND LINK_LIBRARY ${COCOA_LIBRARY})
ENDIF()

FILE(GLOB PLATFORM_SOURCE_FILES ${GL_PLATFORM_NAME}/*.*)

ADD_DEFINITIONS(-DGL_CROSS_PLATFORM_EXPORTS)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${OPENGL_INCLUDE_DIR}
	${COMMON_DIRS})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIBRARY})

#INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")