CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME GLPlatform)

#FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

#IF (NOT DEFINED ENV{OPENGL_EXTERNAL_DIR} OR NOT DEFINED COMMON_DIRS)
#	MESSAGE("Not found path." FATAL_ERROR)
#ENDIF()

#SET(OPENGL_EXTERNAL_DIR $ENV{OPENGL_EXTERNAL_DIR})
SET(LINK_LIBRARY ${OPENGL_LIBRARIES})

FILE(GLOB HEADER_FILES *.h)

IF (PLATFORM_NAME_OSX)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	MARK_AS_ADVANCED(COCOA_LIBRARY)
   	LIST(APPEND LINK_LIBRARY ${COCOA_LIBRARY})
ENDIF()

FILE(GLOB PLATFORM_SOURCE_FILES ${PLATFORM_NAME}/*.*)

ADD_DEFINITIONS(-DGL_PLATFORM_EXPORTS)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADER_FILES} ${PLATFORM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
	PUBLIC 
		${CMAKE_CURRENT_SOURCE_DIR}
	PRIVATE 
		${OPENGL_EXTERNAL_DIR}
		${OPENGL_INCLUDE_DIR}
		${COMMON_DIR}
	)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIBRARY})

#INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "C:\\Temp\\FRE_INSTALL")
